add img code in Mou

--- a/20160306/2016年03月06日作业.md
+++ b/20160306/2016年03月06日作业.md
@@ -31,12 +31,13 @@ cp /Users/zhouyalin/Downloads/apkkiller/output/test/source/test/classes.dex /Use
 /Users/zhouyalin/Downloads/apkkiller/soft/bin/dex2jar /Users/zhouyalin/Downloads/apkkiller/output/test/source/classes.dex   
 
 ⑥下载jd-gui工具，打开/Users/zhouyalin/Downloads/apkkiller/output/test/source/classes_dex2jar.jar文件  
-对应截图： 
-
+对应截图：    
+<img src="https://github.com/Test-Seven/zhouyalin/blob/master/20160306/%E5%8F%8D%E7%BC%96%E8%AF%91%E9%85%92%E4%BB%99%E7%BD%91apk%E6%88%AA%E5%9B%BE.png" width = "300" height = "200" alt="反编译任意apk截图" align=center />
 
 2.aapt的命令查询权限，并且截图   
 使用命令：aapt dump badging aimeituan-stage-615.apk
-DONE
+对应截图：   
+<img src="https://github.com/Test-Seven/zhouyalin/blob/master/20160306/aapt%E8%8E%B7%E5%8F%96apk%E7%94%A8%E6%88%B7%E6%9D%83%E9%99%90%E6%88%AA%E5%9B%BE.png" width = "300" height = "200" alt="aapt命令查询app权限截图"/>
 
 3.编写三种不同切入点的android monkey的命令，并成功运行，同时说明切入点是什么   
 ①adb -s #{serial} shell monkey -p #{@config['packagename']} --throttle 300 --pct-touch 32 --pct-motion 15 --pct-trackball 0 --pct-nav 15 --pct-syskeys 0 --pct-anyevent 15 -v -v -v 5000 --ignore-crashes --ignore-timeouts --ignore-security-exceptions
